update docker-compose and add network

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,4 @@
-PG_VERSION=15
-PG_USER=postgres
-PG_PASSWORD=postgres
-PG_HOSTNAME=localhost
-PG_DATABASE=database
-PG_EXPOSE=5432
+PGVERSION=15
+PGPASSWORD=postgres
+PGDB=dev
+PGEXPOSE=5432
